[metadata]
name = Jinja2
# Version needs regex in setup.py.
url = https://palletsprojects.com/p/jinja
project_urls =
    Documentation = https://jinja.palletsprojects.com/
    Code = https://github.com/pallets/jinja
    Issue tracker = https://github.com/pallets/jinja/issues
license = BSD-3-Clause
license_files = LICENSE.rst
author = Armin Ronacher
author_email = armin.ronacher@active-4.com
maintainer = Pallets
maintainer_email = contact@palletsprojects.com
description = A very fast and expressive template engine.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Text Processing :: Markup :: HTML

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
babel.extractors =
    jinja2 = jinja2.ext:babel_extract[i18n]

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    jinja2
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    # __init__ module exports names
    src/jinja2/__init__.py: F401

[mypy]
files = src/jinja2
allow_redefinition = True
disallow_subclassing_any = True
# disallow_untyped_defs = True
strict_equality = True
strict_optional = False
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True

[mypy-_pytest.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-requests_unixsocket.*]
ignore_missing_imports = True
